--- a/src/pages/Home/components/style.css
+++ b/src/pages/Home/components/style.css
@@ -178,9 +178,7 @@
 }
 
 .footer {
-  width: 100%;
-  color: white;
-  background-image: url('https://images.furnituredealer.net/img/dealer/24655/slideshow/98c306e356ad417f95b3d06387925991.jpg');
+  color: #000;
 }
 
 .footer-overlay {
@@ -208,4 +206,92 @@
 
 .banner-col img {
   max-width: 100%;
+}
+
+.full-width {
+  max-width: 100%;
+  height: 100%;
+}
+
+.black-color {
+  color: #000;
+}
+
+.right-collection {
+  border-top: 1px solid #816246;
+}
+
+.card-collection {
+  width: 60%;
+  background: #F5EDE6;
+  color: #000;
+  border-radius: 169px;
+  padding: 80px 10px;
+}
+
+.card-collection span {
+  padding: 10px 20px;
+  border-radius: 40px;
+  border: 2px solid #816246;
+}
+
+.card-collection span:hover {
+  cursor: pointer;
+}
+
+.btn-home {
+  padding: 10px 20px;
+  border-radius: 40px;
+  border: 2px solid #816246;
+  color: #000;
+  width: fit-content;
+}
+
+.btn-home:hover {
+  cursor: pointer;
+}
+
+.subscribe {
+  /* filter: opacity(30%); */
+  position: relative;
+
+}
+
+.subscribe:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  background-image: url("https://plus.unsplash.com/premium_photo-1681406994502-bb673c265877?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.subscribe-sub {
+  width: 40%;
+  margin: 0 auto;
+  z-index: 20;
+}
+
+.subscribe-footer {
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+}
+
+.btn-subscribe:hover {
+  cursor: pointer;
+}
+
+.social-link {
+  color: #000;
+}
+
+.social-link:hover {
+  cursor: pointer;
+  color: #000;
 }
