--- a/src/pages/Contact/contact.style.css
+++ b/src/pages/Contact/contact.style.css
@@ -1,3 +1,8 @@
 .contact {
-  margin-top: 100px;
+  padding-top: 100px;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
+
+.contact {}
